      Hayward <gah@dirac.bellcore.com>.

hardaker 20 Dec 95 15:56:16
    - Found and fixed a memory leak in the routing table mib.

hardaker 28 Dec 95 10:01:35
    - Added sedscript to the .cvsignore file.

hardaker 28 Dec 95 10:24:37
    - Added a sedscript which is built from config.h and agent/extensible/mibdefs.h
      - used to dynamically build mib.txt and local/snmpcheck.


-------------------------------------------------------------------------------

Changes since V3.0.2.1

hardaker 29 Sep 95 13:43:49
    - ported to GNU's autoconfig2.4
      - to install, you must now run ./configure first to generate the
        Makefiles and config.h
      - almost all of the code is now dynamically checked for problems
        rather than being dependant on architecture names.
    - system name now dynamically determined at run time (from uname -n)
    - created a 'make depend' call (finally).
    - (agent/snmp_vars.h) changed SYSNAME define to SYSTEMNAME define to
      avoid a conflict with a solaris header file.
    - protecting better against include header files twice.
    - Most of port to Solaris 2.4 finished.  The kernel reads still need work.

hardaker 29 Sep 95 13:46:43
    - (NEWS) updated the news file.

hardaker  3 Oct 95 09:24:00
    (acconfig.h) Minor bug:  recursive comments not correct for compilers (AIX)

hardaker  3 Oct 95 09:43:54
    (versioninfo.c) Added 3-0-3-A1 tag

hardaker  4 Oct 95 16:53:39
    version tag of versioninfo.c

hardaker  5 Oct 95 15:23:05
    - More Solaris porting.
      - Most mibII entries now work.
         - Haven't checked returned information for accuracy
      - sysUpTime still fails.
      - cc and gcc both compile everything now.

hardaker  5 Oct 95 15:48:23
    version tag of versioninfo.c

hardaker  6 Oct 95 11:37:00
    - (README) Moved INSTALLATION instructions to INSTALL
               Changed listing of supported architectures
               Updated AVAILABILITY section

hardaker  6 Oct 95 16:28:48