@@ -42,9 +42,11 @@ s/DREMOVEMEISKTOTAL/DISKTOTAL/g
 s/DREMOVEMEISKAVAIL/DISKAVAIL/g
 s/DREMOVEMEISKUSED/DISKUSED/g
 s/DREMOVEMEISKPERCENT/DISKPERCENT/g
+s/DREMOVEMEEFDISKMINIMUMSPACE/DEFDISKMINIMUMSPACE/g
 
 s/LREMOVEMEOADAVE/LOADAVE/g
 s/LREMOVEMEOADMAXVAL/LOADMAXVAL/g
+s/DEFMAXLOADAVE/DEFMAXLOADAVE/g
 
 s/VREMOVEMEERDATE/VERDATE/g
 s/VREMOVEMEERCDATE/VERCDATE/g
@@ -53,3 +55,4 @@ s/VREMOVEMEERCLEARCACHE/VERCLEARCACHE/g
 s/VREMOVEMEERUPDATECONFIG/VERUPDATECONFIG/g
 s/VREMOVEMEERRESTARTAGENT/VERRESTARTAGENT/g
 
+s/EREMOVEMERRORTIMELENGTH/ERRORTIMELENGTH/g
